--- a/vue3-project/package.json
+++ b/vue3-project/package.json
@@ -8,21 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.8.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "glob": "^11.0.1",
+    "rimraf": "^6.0.1",
+    "vue": "^3.2.13",
+    "webpack-chain": "^6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.26.8",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-airbnb": "^8.0.0",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-vue": "^9.33.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "prettier": "^3.5.3"
   },
