--- a/vue3-project/package.json
+++ b/vue3-project/package.json
@@ -15,6 +15,7 @@
     "rimraf": "^6.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
+    "vuex": "^4.0.2",
     "webpack-chain": "^6.5.1"
   },
   "devDependencies": {
